OVN v23.03.3 - xx xxx xxxx
--------------------------

OVN v23.03.2 - 15 Sep 2023
--------------------------
  - Bug fixes

OVN v23.03.1 - 29 Aug 2023
--------------------------
   - Bug fixes
  - CT entries are not flushed by default anymore whenever a load balancer
    backend is removed.  A new, per-LB, option 'ct_flush' can be used to
    restore the previous behavior.  Disabled by default.
  - Always allow IPv6 Router Discovery, Neighbor Discovery, and Multicast
    Listener Discovery protocols, regardless of ACLs defined.
  - Send ICMP Fragmentation Needed packets back to offending ports when
    communicating with multichassis ports using frames that don't fit through a
    tunnel. This is done only for logical switches that are attached to a
    physical network via a localnet port, in which case multichassis ports may
    have an effective MTU different from regular ports and hence may need this
    mechanism to maintain connectivity with other peers in the network.
  - ECMP routes use L4_SYM dp-hash by default if the datapath supports it.
    Existing sessions might get re-hashed to a different ECMP path when
    OVN detects the algorithm support in the datapath during an upgrade
    or restart of ovn-controller.
  - Add CoPP for the svc_monitor_mac. This addresses CVE-2023-3153.

OVN v23.03.0 - 03 Mar 2023
--------------------------
  - ovn-controller: Experimental support for co-hosting multiple controller
    instances on the same host.
  - Add ovn-ctl commands for (re)starting/stopping OVSDB relay for OVN SB DB.
  - Add new ovn-db@.service systemd unit to run ovsdb-servers in separate
    systemd units.

OVN v22.12.0 - 16 Dec 2022
--------------------------
  - Add load balancer "affinity_timeout" option to configure load balancing
    of traffic from a particular client to the same backend for a given
    period of time.
  - ovn-northd: Add configuration knobs to enable drop sampling using OVS's
    per-flow IPFIX sampling.